Adicionadas últimas UFCDs com respetivos contéudos e objetivos

--- a/docs/FTec/u0348.md
+++ b/docs/FTec/u0348.md
@@ -10,6 +10,11 @@ sidebar_label: '0348'
 
 **Pontos de crédito:** 4,50
 
+## Objetivos
+
+- Diagnosticar e conhecer os diferentes fatores que intervêm na otimização de um espaço comercial.
+- Aplicar as técnicas de promoção do produto.
+
 ## Conteúdos
 
 - Espaço
