--- a/docs/FTec/u0349.md
+++ b/docs/FTec/u0349.md
@@ -23,3 +23,68 @@ sidebar_label: '0349'
 - Explicar a importância dos equipamentos de proteção coletiva e de proteção individual.
 
 ## Conteúdos
+
+- AMBIENTE
+  - Principais problemas ambientais da atualidade
+  - Resíduos
+    - Definição
+    - Produção de resíduos
+  - Gestão de resíduos
+    - Entidades gestoras de fluxos específicos de resíduos
+    - Estratégias de atuação
+    - Boas práticas para o meio ambiente
+- SEGURANÇA, HIGIENE E SAÚDE NO TRABALHO
+  - CONCEITOS BÁSICOS RELACIONADOS COM A SHST
+    - Trabalho, saúde, segurança no trabalho, higiene no trabalho, saúde no trabalho, medicina no trabalho, ergonomia, psicossociologia do trabalho, acidente de trabalho, doença profissional, perigo, risco profissional, avaliação de riscos e prevenção
+  - ENQUADRAMENTO LEGISLATIVO NACIONAL DA SHST
+    - Obrigações gerais do empregador e do trabalhador
+  - ACIDENTES DE TRABALHO
+    - Conceito de acidente de trabalho
+    - Causas dos acidentes de trabalho
+    - Consequências dos acidentes de trabalho
+    - Custos diretos e indiretos dos acidentes de trabalho
+  - DOENÇAS PROFISSIONAIS
+    - Conceito
+    - Principais doenças profissionais
+  - PRINCIPAIS RISCOS PROFISSIONAIS
+    - Riscos biológicos
+    - Agentes biológicos
+    - Vias de entrada no organismo
+    - Medidas de prevenção e proteção
+    - Riscos Físicos (conceito, efeitos sobre a saúde, medidas de prevenção e proteção)
+    - Ambiente térmico
+    - Iluminação
+    - Radiações (ionizantes e não ionizantes)
+    - Ruído
+    - Vibrações
+    - Riscos químicos
+      - Produtos químicos perigosos
+      - Classificação dos agentes químicos quanto à sua forma
+      - Vias de exposição
+      - Efeitos na saúde
+      - Classificação, rotulagem e armazenagem
+      - Medidas de prevenção e proteção
+    - Riscos de incêndio ou explosão
+      - O fogo como reação química
+        - Fenomenologia da combustão
+        - Principais fontes de energia de ativação
+        - Classes de Fogos
+        - Métodos de extinção
+    - Meios de primeira intervenção extintores
+      - Classificação dos Extintores
+      - Escolha do agente extintor
+    - Riscos elétricos
+      - Riscos de contacto com a corrente elétrica: contatos diretos e indiretos
+      - Efeitos da corrente elétrica sobre o corpo humano
+      - Medidas de prevenção e proteção
+    - Riscos mecânicos
+      - Trabalho com máquinas e equipamentos
+      - Movimentação mecânica de cargas
+    - Riscos ergonómicos
+      - Movimentação manual de cargas
+    - Riscos psicossociais
+  - SINALIZAÇÃO DE SEGURANÇA E SAÚDE
+    - Conceito
+    - Tipos de sinalização
+  - EQUIPAMENTOS DE PROTEÇÃO COLETIVA E DE PROTEÇÃO INDIVIDUAL
+    - Principais tipos de proteção coletiva e de proteção individual
