--- a/docs/FTec/u0350.md
+++ b/docs/FTec/u0350.md
@@ -20,3 +20,40 @@ sidebar_label: '0350'
 - Aplicar os diferentes tipos de perguntas no processo de comunicação.
 
 ## Conteúdos
+
+- Processo de comunicação e perfis comunicacionais
+  - Função e importância dos elementos que intervêm no processo de comunicação
+    - Emissor/Receptor
+    - Canal
+    - Mensagem / código
+    - Contexto
+    - Feedback
+  - Diferentes perfis comunicacionais
+    - Passivo
+    - Agressivo
+    - Manipulador
+    - Assertivo
+- Comunicação assertiva
+  - Particularidades e vantagens do perfil assertivo
+  - Empatia
+    - Escuta ativa/escuta dinâmica
+      - Conceito de contexto comum
+    - Semântica sintaxe
+    - Paralinguagem
+- Barreiras à comunicação
+  - Barreiras gerais do processo de comunicação
+    - Barreiras internas
+      - Objectivas
+      - Subjectivas
+    - Barreiras externas
+  - Barreiras típicas das diferentes fases do processo de comunicação
+    - Construção, adaptação, envio, receção e interpretação da mensagem
+- Processamento interno da informação
+  - Processamento fonético
+  - Processamento literal (significado)
+  - Processamento reflexivo (empático)
+- Tipos de perguntas no processo de comunicação
+  - Abertas
+  - Fechadas
+  - Retorno
+  - Reformulação
