--- a/docs/FTec/u0353.md
+++ b/docs/FTec/u0353.md
@@ -6,9 +6,9 @@ sidebar_label: '0353'
 
 **Código:** 0353
 
-**Carga horária:** 50 horas
+**Carga horária:** 25 horas
 
-**Pontos de crédito:** 4,50
+**Pontos de crédito:** 2,25
 
 ## Objetivos
 
@@ -17,3 +17,17 @@ sidebar_label: '0353'
   mensagem.
 
 ## Conteúdos
+
+- Etapas e regras do atendimento telefónico
+  - Etapas do atendimento telefónico
+    - Guião de apoio ao Operador
+    - Abordagem inicial
+    - Prestação do Serviço / reencaminhamento
+    - Despedida
+  - Regras elementares do comportamento no atendimento telefónico
+- Comunicação telefónica
+  - Linguagem adequada à comunicação telefónica
+  - Comunicação verbal (a forma)
+    - Articulação
+    - Fluência
+    - Modulação (volume, ritmo e tom)
