--- a/docs/FTec/u0354.md
+++ b/docs/FTec/u0354.md
@@ -16,3 +16,6 @@ sidebar_label: '0354'
   de atendimento.
 
 ## Conteúdos
+
+- Linguagem específica aplicada às diferentes fases do atendimento, nas vertentes orais e escritas
+- Expressões idiomáticas
